namespace BE_API.Dto.Role
{
    public class RoleDto
    {
        public long Id { get; set; }
        public string Name { get; set; } = null!;
    }
}
